@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,21 +20,12 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-import java.security.AccessControlException;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.ResourceBundle;
-import java.util.stream.Stream;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Supplier;
 import java.lang.System.LoggerFinder;
@@ -43,34 +34,16 @@ import java.lang.System.Logger.Level;
 
 /**
  * @test
- * @bug     8140364
+ * @bug 8140364
  * @summary Tests a naive implementation of LoggerFinder, and in particular
  *   the default body of System.Logger methods.
  * @build AccessSystemLogger BaseLoggerFinderTest CustomSystemClassLoader BaseLoggerFinder TestLoggerFinder
- * @run  driver AccessSystemLogger
- * @run  main/othervm -Xbootclasspath/a:boot -Djava.system.class.loader=CustomSystemClassLoader BaseLoggerFinderTest NOSECURITY
- * @run  main/othervm -Xbootclasspath/a:boot -Djava.security.manager=allow -Djava.system.class.loader=CustomSystemClassLoader BaseLoggerFinderTest NOPERMISSIONS
- * @run  main/othervm -Xbootclasspath/a:boot -Djava.security.manager=allow -Djava.system.class.loader=CustomSystemClassLoader BaseLoggerFinderTest WITHPERMISSIONS
- * @author danielfuchs
+ * @run driver AccessSystemLogger
+ * @run main/othervm -Xbootclasspath/a:boot -Djava.system.class.loader=CustomSystemClassLoader BaseLoggerFinderTest
  */
 public class BaseLoggerFinderTest {
 
-    static final RuntimePermission LOGGERFINDER_PERMISSION =
-                new RuntimePermission("loggerFinder");
     final static boolean VERBOSE = false;
-    static final ThreadLocal<AtomicBoolean> allowControl = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-    static final ThreadLocal<AtomicBoolean> allowAccess = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-
     final static AccessSystemLogger accessSystemLogger = new AccessSystemLogger();
     static final Class<?> providerClass;
     static {
@@ -103,75 +76,20 @@ public class BaseLoggerFinderTest {
 
     }
 
-    static enum TestCases {NOSECURITY, NOPERMISSIONS, WITHPERMISSIONS};
-
-    static void setSecurityManager() {
-        if (System.getSecurityManager() == null) {
-            Policy.setPolicy(new SimplePolicy(allowControl, allowAccess));
-            System.setSecurityManager(new SecurityManager());
-        }
-    }
 
     public static void main(String[] args) {
-        if (args.length == 0)
-            args = new String[] {
-                //"NOSECURITY",
-                "NOPERMISSIONS",
-                "WITHPERMISSIONS"
-            };
 
         System.out.println("Using provider class: " + providerClass + "[" + providerClass.getClassLoader() + "]");
 
-        Stream.of(args).map(TestCases::valueOf).forEach((testCase) -> {
-            TestLoggerFinder provider;
-            switch (testCase) {
-                case NOSECURITY:
-                    System.out.println("\n*** Without Security Manager\n");
-                    provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                    test(provider, true);
-                    System.out.println("Tetscase count: " + TestLoggerFinder.sequencer.get());
-                    break;
-                case NOPERMISSIONS:
-                    System.out.println("\n*** With Security Manager, without permissions\n");
-                    setSecurityManager();
-                    try {
-                        provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                        throw new RuntimeException("Expected exception not raised");
-                    } catch (AccessControlException x) {
-                        if (!LOGGERFINDER_PERMISSION.equals(x.getPermission())) {
-                            throw new RuntimeException("Unexpected permission check", x);
-                        }
-                        final boolean control = allowControl.get().get();
-                        try {
-                            allowControl.get().set(true);
-                            provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                        } finally {
-                            allowControl.get().set(control);
-                        }
-                    }
-                    test(provider, false);
-                    System.out.println("Tetscase count: " + TestLoggerFinder.sequencer.get());
-                    break;
-                case WITHPERMISSIONS:
-                    System.out.println("\n*** With Security Manager, with control permission\n");
-                    setSecurityManager();
-                    final boolean control = allowControl.get().get();
-                    try {
-                        allowControl.get().set(true);
-                        provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
-                        test(provider, true);
-                    } finally {
-                        allowControl.get().set(control);
-                    }
-                    break;
-                default:
-                    throw new RuntimeException("Unknown test case: " + testCase);
-            }
-        });
+        TestLoggerFinder provider;
+        System.out.println("\n*** Without Security Manager\n");
+        provider = TestLoggerFinder.class.cast(LoggerFinder.getLoggerFinder());
+        test(provider);
+        System.out.println("Tetscase count: " + TestLoggerFinder.sequencer.get());
         System.out.println("\nPASSED: Tested " + TestLoggerFinder.sequencer.get() + " cases.");
     }
 
-    public static void test(TestLoggerFinder provider, boolean hasRequiredPermissions) {
+    public static void test(TestLoggerFinder provider) {
 
         ResourceBundle loggerBundle = ResourceBundle.getBundle(MyLoggerBundle.class.getName());
         final Map<Logger, String> loggerDescMap = new HashMap<>();
@@ -180,56 +98,14 @@ public class BaseLoggerFinderTest {
         // 1. Test loggers returned by LoggerFinder, both for system callers
         //    and not system callers.
         TestLoggerFinder.LoggerImpl appLogger1 = null;
-        try {
-            appLogger1 =
+        appLogger1 =
                 TestLoggerFinder.LoggerImpl.class.cast(provider.getLogger("foo", BaseLoggerFinderTest.class.getModule()));
-            loggerDescMap.put(appLogger1, "provider.getLogger(\"foo\", BaseLoggerFinderTest.class.getModule())");
-            if (!hasRequiredPermissions) {
-                throw new RuntimeException("Managed to obtain a logger without permission");
-            }
-        } catch (AccessControlException acx) {
-            if (hasRequiredPermissions) {
-                throw new RuntimeException("Unexpected security exception: ", acx);
-            }
-            if (!acx.getPermission().equals(LOGGERFINDER_PERMISSION)) {
-                throw new RuntimeException("Unexpected permission in exception: " + acx, acx);
-            }
-            System.out.println("Got expected exception for logger: " + acx);
-            final boolean old = allowControl.get().get();
-            allowControl.get().set(true);
-            try {
-                appLogger1 =
-                    TestLoggerFinder.LoggerImpl.class.cast(provider.getLogger("foo", BaseLoggerFinderTest.class.getModule()));
-                    loggerDescMap.put(appLogger1, "provider.getLogger(\"foo\", BaseLoggerFinderTest.class.getModule())");
-            } finally {
-                allowControl.get().set(old);
-            }
-        }
+        loggerDescMap.put(appLogger1, "provider.getLogger(\"foo\", BaseLoggerFinderTest.class.getModule())");
 
-        TestLoggerFinder.LoggerImpl sysLogger1 = null;
-        try {
-            sysLogger1 = TestLoggerFinder.LoggerImpl.class.cast(provider.getLogger("foo", Thread.class.getModule()));
-            loggerDescMap.put(sysLogger1, "provider.getLogger(\"foo\", Thread.class.getModule())");
-            if (!hasRequiredPermissions) {
-                throw new RuntimeException("Managed to obtain a system logger without permission");
-            }
-        } catch (AccessControlException acx) {
-            if (hasRequiredPermissions) {
-                throw new RuntimeException("Unexpected security exception: ", acx);
-            }
-            if (!acx.getPermission().equals(LOGGERFINDER_PERMISSION)) {
-                throw new RuntimeException("Unexpected permission in exception: " + acx, acx);
-            }
-            System.out.println("Got expected exception for system logger: " + acx);
-            final boolean old = allowControl.get().get();
-            allowControl.get().set(true);
-            try {
-                sysLogger1 = TestLoggerFinder.LoggerImpl.class.cast(provider.getLogger("foo", Thread.class.getModule()));
-                loggerDescMap.put(sysLogger1, "provider.getLogger(\"foo\", Thread.class.getModule())");
-            } finally {
-                allowControl.get().set(old);
-            }
-        }
+        TestLoggerFinder.LoggerImpl sysLogger1 =
+                TestLoggerFinder.LoggerImpl.class.cast(provider.getLogger("foo", Thread.class.getModule()));
+        loggerDescMap.put(sysLogger1, "provider.getLogger(\"foo\", Thread.class.getModule())");
+
         if (appLogger1 == sysLogger1) {
             throw new RuntimeException("identical loggers");
         }
@@ -252,55 +128,13 @@ public class BaseLoggerFinderTest {
 
         // 2. Test localized loggers returned LoggerFinder, both for system
         //   callers and non system callers
-        Logger appLogger2 = null;
-        try {
-            appLogger2 = provider.getLocalizedLogger("foo", loggerBundle, BaseLoggerFinderTest.class.getModule());
-            loggerDescMap.put(appLogger2, "provider.getLocalizedLogger(\"foo\", loggerBundle, BaseLoggerFinderTest.class.getModule())");
-            if (!hasRequiredPermissions) {
-                throw new RuntimeException("Managed to obtain a logger without permission");
-            }
-        } catch (AccessControlException acx) {
-            if (hasRequiredPermissions) {
-                throw new RuntimeException("Unexpected security exception: ", acx);
-            }
-            if (!acx.getPermission().equals(LOGGERFINDER_PERMISSION)) {
-                throw new RuntimeException("Unexpected permission in exception: " + acx, acx);
-            }
-            System.out.println("Got expected exception for logger: " + acx);
-            final boolean old = allowControl.get().get();
-            allowControl.get().set(true);
-            try {
-                appLogger2 = provider.getLocalizedLogger("foo", loggerBundle, BaseLoggerFinderTest.class.getModule());
-                loggerDescMap.put(appLogger2, "provider.getLocalizedLogger(\"foo\", loggerBundle, BaseLoggerFinderTest.class.getModule())");
-            } finally {
-                allowControl.get().set(old);
-            }
-        }
+        Logger appLogger2 =
+                provider.getLocalizedLogger("foo", loggerBundle, BaseLoggerFinderTest.class.getModule());
+        loggerDescMap.put(appLogger2, "provider.getLocalizedLogger(\"foo\", loggerBundle, BaseLoggerFinderTest.class.getModule())");
 
-        Logger sysLogger2 = null;
-        try {
-            sysLogger2 = provider.getLocalizedLogger("foo", loggerBundle, Thread.class.getModule());
-            loggerDescMap.put(sysLogger2, "provider.getLocalizedLogger(\"foo\", loggerBundle, Thread.class.getModule())");
-            if (!hasRequiredPermissions) {
-                throw new RuntimeException("Managed to obtain a system logger without permission");
-            }
-        } catch (AccessControlException acx) {
-            if (hasRequiredPermissions) {
-                throw new RuntimeException("Unexpected security exception: ", acx);
-            }
-            if (!acx.getPermission().equals(LOGGERFINDER_PERMISSION)) {
-                throw new RuntimeException("Unexpected permission in exception: " + acx, acx);
-            }
-            System.out.println("Got expected exception for localized system logger: " + acx);
-            final boolean old = allowControl.get().get();
-            allowControl.get().set(true);
-            try {
-                sysLogger2 = provider.getLocalizedLogger("foo", loggerBundle, Thread.class.getModule());
-                loggerDescMap.put(sysLogger2, "provider.getLocalizedLogger(\"foo\", loggerBundle, Thread.class.getModule()))");
-            } finally {
-                allowControl.get().set(old);
-            }
-        }
+        Logger sysLogger2 =
+                provider.getLocalizedLogger("foo", loggerBundle, Thread.class.getModule());
+        loggerDescMap.put(sysLogger2, "provider.getLocalizedLogger(\"foo\", loggerBundle, Thread.class.getModule())");
         if (appLogger2 == sysLogger2) {
             throw new RuntimeException("identical loggers");
         }
@@ -621,76 +455,4 @@ public class BaseLoggerFinderTest {
         }
     }
 
-    final static class PermissionsBuilder {
-        final Permissions perms;
-        public PermissionsBuilder() {
-            this(new Permissions());
-        }
-        public PermissionsBuilder(Permissions perms) {
-            this.perms = perms;
-        }
-        public PermissionsBuilder add(Permission p) {
-            perms.add(p);
-            return this;
-        }
-        public PermissionsBuilder addAll(PermissionCollection col) {
-            if (col != null) {
-                for (Enumeration<Permission> e = col.elements(); e.hasMoreElements(); ) {
-                    perms.add(e.nextElement());
-                }
-            }
-            return this;
-        }
-        public Permissions toPermissions() {
-            final PermissionsBuilder builder = new PermissionsBuilder();
-            builder.addAll(perms);
-            return builder.perms;
-        }
-    }
-
-    public static class SimplePolicy extends Policy {
-        final static RuntimePermission CONTROL = LOGGERFINDER_PERMISSION;
-        final static RuntimePermission ACCESS = new RuntimePermission("accessClassInPackage.jdk.internal.logger");
-
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final Permissions permissions;
-        final ThreadLocal<AtomicBoolean> allowControl;
-        final ThreadLocal<AtomicBoolean> allowAccess;
-        public SimplePolicy(ThreadLocal<AtomicBoolean> allowControl, ThreadLocal<AtomicBoolean> allowAccess) {
-            this.allowControl = allowControl;
-            this.allowAccess = allowAccess;
-            permissions = new Permissions();
-        }
-
-        Permissions getPermissions() {
-            if (allowControl.get().get() || allowAccess.get().get()) {
-                PermissionsBuilder builder =  new PermissionsBuilder()
-                        .addAll(permissions);
-                if (allowControl.get().get()) {
-                    builder.add(CONTROL);
-                }
-                if (allowAccess.get().get()) {
-                    builder.add(ACCESS);
-                }
-                return builder.toPermissions();
-            }
-            return permissions;
-        }
-
-        @Override
-        public boolean implies(ProtectionDomain domain, Permission permission) {
-            return getPermissions().implies(permission) || DEFAULT_POLICY.implies(domain, permission);
-        }
-
-        @Override
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return new PermissionsBuilder().addAll(getPermissions()).toPermissions();
-        }
-
-        @Override
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return new PermissionsBuilder().addAll(getPermissions()).toPermissions();
-        }
-    }
 }
